2008-12-13  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add
	Style.CalculateLabelAngleForPolyLine and
	Style.DrawPointSymbolOnPolyLine

2008-12-13  Scott Ellington  <scott.ellington@gmail.com>

	* Cumberland.csproj:
	* Data/WellKnownText/SimpleFeatureAccess.cs: fix bug #1

2008-12-11  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs: clip extents to world extents when calculating
	tile rectangle,

	* Rectangle.cs: add Rectangle.Intersect

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Drawing/MapDrawer.cs: add TextRenderingHint 

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Projection/ProjFourWrapper.cs: fix p/invoke

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs:
	* Projection/ProjFourWrapper.cs: readd obsolete members

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* AssemblyInfo.cs: bump to 0.2

	* Layer.cs: internalize public methods nobody cares about

2008-12-09  Scott Ellington  <scott.ellington@gmail.com>

	* Point.cs:
	* Rectangle.cs:
	* Web/TileProvider.cs:
	* Drawing/MapDrawer.cs:
	* Data/Shapefile/Shapefile.cs:
	* Data/KeyholeMarkupLanguage.cs:
	* Projection/ProjFourWrapper.cs:
	* Data/Shapefile/DBaseIIIFile.cs:
	* Xml/Serialization/MapSerializer.cs:
	* Drawing/MapConfigurationException.cs:
	* Projection/SphericalMercatorProjector.cs: gendarme fixes

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Web/TileProvider.cs:
	* Drawing/MapDrawer.cs: add TileProvider.BleedInPixels

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add Style.LabelCustomFont

2008-12-08  Scott Ellington  <scott.ellington@gmail.com>

	* Style.cs:
	* Layer.cs:
	* Drawing/MapDrawer.cs:
	* Xml/Serialization/MapSerializer.cs: add minscale/maxscale for
	layer,style, and labels
